[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-asr-correction"
version = "0.1.0"
description = "Speech recognition error correction using Large Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alexey Shevchenko", email = "alexshevvv@example.com"}
]
keywords = ["asr", "speech-recognition", "llm", "whisper", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/alexshevvv/llm-asr-correction"
Repository = "https://github.com/alexshevvv/llm-asr-correction"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data
    | experiments
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip = [".venv", "data", "experiments"]

[tool.flake8]
max-line-length = 79
exclude = [".venv", "data", "experiments", "__pycache__"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["data", "experiments", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"